--- a/style.css
+++ b/style.css
@@ -11,6 +11,17 @@ html, body{
     width: 100%;
 }
 
+#cursor{
+    height: 2.3vw;
+    width: 2.3vw;
+    border-radius: 50%;
+    border: 2px solid whitesmoke;
+    position: fixed;
+    z-index: 999;
+    mix-blend-mode: difference;
+    transform: translate(-50%,-50%);
+}
+
 #loader{
     height: 100%;
     width: 100%;
@@ -100,4 +111,53 @@ html, body{
     height: 100vh;
     width: 100%;
     background-color: #151515;
+}
+
+#page1 #nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2.5vw 5.5vw;
+}
+
+#nav-part2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3vw;
+}
+
+#nav-part2 h4{
+    font-size: 0.9vw;
+    font-weight: 500;
+}
+
+.hero{
+    width: 72%;
+    margin-left: 27%;
+    overflow: hidden;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 9999;
+}
+
+.hero:nth-child(2){
+    margin-top: 18vh;
+}
+
+.hero h1{
+    font-size: 7vw;
+    line-height: 7vw;
+}
+
+.hero h2{
+    font-size: 7vw;
+    line-height: 7vw;
+}
+
+.hero h2:hover{
+    -webkit-text-stroke: 2px white;
+    color: transparent;
 }
