--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ html, body{
     width: 100%;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 #cursor{
     height: 2.3vw;
     width: 2.3vw;
@@ -153,11 +157,146 @@ html, body{
 }
 
 .hero h2{
-    font-size: 7vw;
-    line-height: 7vw;
+    font-size: 7.2vw;
+    line-height: 7.2vw;
+    font-weight: 600;
+    border-bottom: 0.6vw solid white;
+    padding-bottom: 0.8vw;
 }
 
 .hero h2:hover{
     -webkit-text-stroke: 2px white;
     color: transparent;
+    border-bottom: 0.6vw solid #0e0d0d;
+}
+
+#page2{
+    height: 100vh;
+    width: 100%;
+    padding-top: 17vh;
+    position: relative;
+}
+
+#video-container{
+    height: 66vh;
+    width: 71vw;
+    position: relative;
+    left: 28%;
+    background-image: url(obys-bg-img.jpg);
+}
+
+#video-container video{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+#video-container img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+}
+
+#video-cursor{
+    background-color: #ffa63d;
+    height: 8.5vw;
+    width: 8.5vw;
+    border-radius: 50%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: -12%;
+    left: 80%;
+    z-index: 999;
+}
+
+#video-cursor i{
+    font-size: 2vw;
+}
+
+#page3{
+    min-height: 100vh;
+    width: 100%;
+    background-color: #1b1b1b;
+    position: relative;
+}
+
+#page4{
+    min-height: 100vh;
+    width: 100%;
+    position: relative;
+    padding: 7vh 0;
+}
+
+#page4-content{
+    width: 72vw;
+    position: relative;
+    margin-left: 28%;
+}
+
+#page4-content h1{
+    font-size: 7vw;
+}
+
+#page4-content .underline{
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    margin: 5vw 0;
+}
+
+#page4-content>p{
+    font-size: 2vw;
+    width: 50%;
+    margin-bottom: 3vw;
+}
+
+#page4-flex{
+    display: flex;
+}
+
+#page4-flex img{
+    width: 48%;
+}
+
+#page4-flex p{
+    font-size: 0.9vw;
+    width: 19%;
+    margin-left: 1vw;
+}
+
+#page4-sideb{
+    background-color: #3f7df4;
+    width: 33vw;
+    padding: 3vw;
+    position: relative;
+    margin-top: -31vh;
+    margin-left: 24vw;
+}
+
+#page4-sideb-elem{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 1.7vw 0;
+    border-bottom: 2px solid rgba(245, 245, 245, 0.721);
+}
+
+#page4-sideb-elem p{
+    width: 40%;
+    font-size: 0.8vw;
+}
+
+#page4-sideb-elem h4{
+    font-size: 1.4vw;
+    font-weight: 500;
+}
+
+#page5{
+    min-height: 100vh;
+    width: 100%;
+    padding: 5vw 0;
 }
