--- a/style.css
+++ b/style.css
@@ -143,8 +143,6 @@ body{
     height: fit-content;
     display: flex;
     align-items: center;
-    position: relative;
-    z-index: 9999;
 }
 
 .hero:nth-child(2){
@@ -154,6 +152,17 @@ body{
 .hero h1{
     font-size: 7vw;
     line-height: 7vw;
+    position: relative;
+}
+
+#hero1::before{
+    content: "01";
+    position: absolute;
+    font-size: 3vw;
+    font-weight: 100;
+    font-family: "silk serif";
+    left: 18%;
+    top: 31%;
 }
 
 .hero h2{
@@ -239,6 +248,17 @@ body{
 
 #page4-content h1{
     font-size: 7vw;
+    position: relative;
+}
+
+#page4-content h1::before{
+    content: "03";
+    position: absolute;
+    font-size: 3vw;
+    font-weight: 100;
+    font-family: "silk serif";
+    left: -12%;
+    top: 8%;
 }
 
 #page4-content .underline{
@@ -358,4 +378,63 @@ body{
     font-style: italic;
     font-family: "silk serif";
     color: transparent;
+}
+
+#footer{
+    height: 90vh;
+    width: 100%;
+    position: relative;
+    padding-left: 28vw;
+    padding-right: 2vw;
+}
+
+#footer h1{
+    font-size: 7vw;
+    position: relative;
+}
+
+#footer h1::before{
+    content: "04";
+    position: absolute;
+    font-size: 3vw;
+    font-weight: 100;
+    font-family: "silk serif";
+    left: -12%;
+    top: 8%;
+}
+
+.underline{
+    height: 2px;
+    width: 100%;
+    background-color: white;
+    margin: 3vw 0;
+}
+
+#footer-div{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding-right: 15vw;
+    padding-top: 4vw;
+    margin-bottom: 6vw;
+}
+
+#footer-div h6{
+    font-size: 0.9vw;
+    margin-bottom: 1.5vw;
+    font-weight: 500;
+}
+
+#footer-div h5{
+    font-size: 1.4vw;
+    font-weight: 500;
+}
+
+.box{
+    width: 20%;
+}
+
+#footer>h5{
+    font-weight: 500;
+    font-size: 1vw;
 }
