--- a/style.css
+++ b/style.css
@@ -15,15 +15,11 @@ body{
     overflow-x: hidden;
 }
 
-#cursor{
-    height: 2.3vw;
-    width: 2.3vw;
-    border-radius: 50%;
+.mousefollower{
     border: 2px solid whitesmoke;
-    position: fixed;
-    z-index: 999;
+    background-color: #fff;
     mix-blend-mode: difference;
-    transform: translate(-50%,-50%);
+    scale: 2;
 }
 
 #loader{
@@ -108,7 +104,7 @@ body{
 
 #main{
     position: relative;
-    background-color: #0B0B0B;
+    background-color: #151515;/*#0B0B0B*/
 }
 
 #page1{
@@ -182,7 +178,7 @@ body{
 #page2{
     height: 100vh;
     width: 100%;
-    padding-top: 17vh;
+    padding-top: 20vh;
     position: relative;
 }
 
@@ -191,21 +187,16 @@ body{
     width: 71vw;
     position: relative;
     left: 28%;
-    background-image: url(obys-bg-img.jpg);
+    background-image: url(Assets/obys-bg-img.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 #video-container video{
     height: 100%;
     width: 100%;
     object-fit: cover;
-}
-
-#video-container img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
+    opacity: 0;
 }
 
 #video-cursor{
@@ -229,15 +220,146 @@ body{
 #page3{
     min-height: 100vh;
     width: 100%;
-    background-color: #1b1b1b;
+    /* background-color: #1b1b1b; */
     position: relative;
+    padding: 17vh 2vw;
+    margin-bottom: 25vh;
 }
+
+#page3 h1{
+    font-size: 7vw;
+    position: relative;
+    margin-left: 28vw;
+}
+
+#page3 h1::before{
+    content: "02";
+    position: absolute;
+    font-size: 3vw;
+    font-weight: 100;
+    font-family: "silk serif";
+    left: -12%;
+    top: 8%;
+}
+
+#page3 .underline{
+    margin-left: 28vw;
+    height: 3px;
+    width: 100%;
+    background-color: white;
+}
+
+#image-div-container{
+    padding: 1vw;
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.image-div{
+    height: 38vw;
+    width: 27vw;
+    position: relative;
+    overflow: hidden;
+    flex-shrink: 0;
+    margin: 2vw;
+}
+
+.image-div:nth-child(1){
+    height: 29vw;
+    width: 21vw;
+}
+
+.image-div img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.page3-circle1{
+    height: 23vw;
+    width: 23vw;
+    position: relative;
+    border: 2px solid white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 23vh;
+    margin-left: 10vw;
+}
+
+.page3-circle1 svg{
+    height: 30%;
+}
+
+.page3-circle2{
+    height: 23vw;
+    width: 23vw;
+    position: relative;
+    border: 2px solid white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.page3-circle2 svg{
+    height: 30%;
+    rotate: -45deg;
+}
+
+.circle-in{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    scale: 0;
+    border-radius: 50%;
+    transition: all ease 0.5s;
+}
+
+.circle-in p{
+    font-size: 0.95vw;
+    font-weight: 600;
+    color: #000;
+    width: 60%;
+    scale: 0;
+    transition: all ease 0.5s;
+    transition-delay: 0.3s;
+}
+
+.page3-circle1:hover .circle-in{
+    scale: 1;
+}
+
+.page3-circle1:hover p{
+    scale: 1;
+}
+
+.page3-circle2:hover .circle-in{
+    scale: 1;
+}
+
+.page3-circle2:hover p{
+    scale: 1;
+}
+
 
 #page4{
     min-height: 100vh;
     width: 100%;
     position: relative;
     padding: 7vh 0;
+    margin-top: 20vh;
 }
 
 #page4-content{
@@ -437,4 +559,23 @@ body{
 #footer>h5{
     font-weight: 500;
     font-size: 1vw;
+}
+
+._canvas_container{
+    z-index: 999999 !important;
+    pointer-events: none;
+}
+
+#flag{
+    height: 25vw;
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    transform: translate(-50%,-50%);
+}
+
+#hero3{
+    z-index: 999;
+    position: relative;
 }
